# chat-terminal

./: README.md  pyproject.toml
src/: app.css  app.py  auth.py  chat.py  config.py  friends.py
